tests/rosetta/out/Zig/99-bottles-of-beer.zig
// Generated by Mochi compiler v0.10.26 on 1970-01-01T00:00:00Z
const std = @import("std");

fn handleError(err: anyerror) noreturn {
    std.debug.panic("{any}", .{err});
}

fn _concat_string(a: []const u8, b: []const u8) []const u8 {
    return std.mem.concat(u8, &[_][]const u8{ a, b }) catch |err| handleError(err);
}

fn bottles(n: i32) []const u8 {
    if (n == 0) {
        return "No more bottles";
    }
    if (n == 1) {
        return "1 bottle";
    }
    return _concat_string(std.fmt.allocPrint(std.heap.page_allocator, "{d}", .{n}) catch |err| handleError(err), " bottles");
}

fn main() void {
    var i = 99; // i32
    while (i > 0) {
        std.debug.print("{s}\n", .{_concat_string(bottles(i), " of beer on the wall")});
        std.debug.print("{s}\n", .{_concat_string(bottles(i), " of beer")});
        std.debug.print("Take one down, pass it around\n", .{});
        std.debug.print("{s}\n", .{_concat_string(bottles((i - 1)), " of beer on the wall")});
        i = (i - 1);
    }
}

pub fn main() void {
    main();
}
